--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="pwa-test/manifest.json">
    
     <title>Hello World!</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="pwa-test/style.css" />
 
     <!-- The website JavaScript file -->
-    <script src="script.js" defer></script>
+    <script src="pwa-test/script.js" defer></script>
   </head>
   <body>
    <h1>
