--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+    <script src="script.js" defer></script>
   <title>Joke PWA</title>
 </head>
 <body>
@@ -14,6 +15,6 @@
   <div id="joke-container"></div>
   <button id="clear-cache">Clear Dynamic Cache</button>
 
-  <script src="app.js"></script>
+
 </body>
 </html>
