--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button id="joke-btn">Get Joke</button>
   <div id="joke-container"></div>
   <button id="clear-cache">Clear Dynamic Cache</button>
-   <button id="installbutton">Install</button>
+   <button id="install-button">Install</button>
 
 
 </body>
